Cabal-Version:      >= 1.10
Name:               sdl2-ttf
Version:            1.0.0
maintainer:         Rongcui Dong (karl_1702@188.com)
author:             Ömer Sinan Ağacan (omeragacan@gmail.com)
                  , Sean Chalmers (sclhiannan@gmail.com)
license-file:       LICENSE
license:            MIT
build-type:         Simple
category:           Foreign binding
synopsis:           Binding to libSDL2-ttf
description:        Haskell bindings to the sdl2-ttf C++ library <http://www.libsdl.org/projects/SDL_ttf/>.
data-files:
extra-source-files: cbits/rendering.h
                    examples/ARIAL.TTF
                    examples/font_test.c

library
  hs-source-dirs:     src
  build-depends:      base >= 3 && < 5, sdl2 >= 2, transformers
  default-extensions: ForeignFunctionInterface
  exposed-modules:    SDL.TTF.Types,
                      SDL.TTF.FFI
                      SDL.TTF
  other-modules:      SDL.TTF.Internals
  ghc-options:        -Wall
  include-dirs:       cbits
  c-sources:          cbits/rendering.c

  includes: SDL.h

  extra-libraries:    SDL2, SDL2_ttf

  pkgconfig-depends:  sdl2 >= 2.0.2

  default-language:   Haskell2010

executable font-test
  main-is:          font_test.hs
  hs-source-dirs:   examples
  build-depends:    base >= 3 && <5, sdl2, sdl2-ttf, linear
  ghc-options:      -Wall
  default-language: Haskell2010

source-repository head
    type:     git
    location: https://github.com/carldong/sdl2-ttf
